deploy_django.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: gulianglily/vod_backend_poc2-app:latest
        command: ["/bin/sh", "-c"]
        args:
        - "python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000"
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: code-volume
          mountPath: /code
      volumes:
      - name: code-volume
        hostPath:
          path: /home/altrauser/vod_portal_tidy

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: demo.mk8snode4.hhii.ampere
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app-service
            port:
              number: 8000
---
#apiVersion: v1
#kind: Service
#metadata:
#  name: app-service
#spec:
#  selector:
#    app: app
#  ports:
#    - protocol: TCP
#      port: 8000
#      targetPort: 8000
#      nodePort: 31884
#  type: NodePort

apiVersion: v1
kind: Service
metadata:
  name: app-service
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
