video-portal-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: video-poral
spec:
  replicas: 1
  selector:
    matchLabels:
      app: video-poral
  template:
    metadata:
      labels:
        app: video-poral
    spec:
      containers:
      - name: video-poral
        image: docker.io/mrdojojo/video-portal:v0.9.1
        command: ["/bin/sh", "-c"]
        args:
        - "ls -al && python3 manage.py migrate && python3 manage.py runserver 0.0.0.0:8000"
        ports:
        - containerPort: 8000
        volumeMounts:
        - name: code-volume
          mountPath: /media
        - name: kubeconfig
          mountPath: /root/.kube/config
          subPath: config
          readOnly: true
      volumes:
        - name: code-volume
          persistentVolumeClaim:
            claimName: video-portal-app-pv-claim
        - name: kubeconfig
          configMap:
            defaultMode: 420
            name: kubeconfig-file
---
apiVersion: v1
kind: Service
metadata:
  name: video-portal-service
spec:
  selector:
    app: video-portal
  type: NodePort
  ports:
    - nodePort: 32080
      protocol: TCP
      port: 8000
      targetPort: 8000
      
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: video-poral-ingress
spec:
  rules:
  - host: demo.mk8snode4.hhii.ampere
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: video-poral-service
            port:
              number: 8000
